# dheera_ai

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  VECTOR_STORE_GUIDE.md  codecov.yaml  dheera-start  dheera-stop  docker-compose.hardened.yml  docker-compose.yml  index.yaml  package-lock.json  prometheus.yml  provider_endpoints_support.json  proxy_server_config.yaml  pyproject.toml  pyrightconfig.json  render.yaml  security.md
.circleci/: config.yml
dheera-ai-proxy-extras/: README.md  migration_runbook.md  pyproject.toml
dheera-ai-proxy-extras/dheera_ai_proxy_extras/: _logging.py  utils.py
dheera_ai/: _redis.py  (+15 more)
enterprise/: LICENSE.md  README.md  pyproject.toml
enterprise/cloudformation_stack/: dheera_ai.yaml
enterprise/dheera_ai_enterprise/enterprise_callbacks/: callback_controls.py  example_logging_api.py  llama_guard.py  llm_guard.py  secret_detection.py
enterprise/dheera_ai_enterprise/enterprise_callbacks/pagerduty/: pagerduty.py
enterprise/dheera_ai_enterprise/enterprise_callbacks/send_emails/: base_email.py  endpoints.py  resend_email.py  sendgrid_email.py  smtp_email.py
enterprise/dheera_ai_enterprise/integrations/: custom_guardrail.py
enterprise/dheera_ai_enterprise/litellm_core_utils/: litellm_logging.py
enterprise/dheera_ai_enterprise/proxy/: audit_logging_endpoints.py  enterprise_routes.py  proxy_server.py  readme.md  utils.py
enterprise/dheera_ai_enterprise/proxy/auth/: __init__.py  custom_sso_handler.py  route_checks.py  user_api_key_auth.py
enterprise/dheera_ai_enterprise/proxy/common_utils/: check_batch_cost.py
enterprise/enterprise_hooks/: __init__.py  aporia_ai.py  banned_keywords.py  blocked_user_list.py  google_text_moderation.py  openai_moderation.py
enterprise/enterprise_ui/: README.md
(+3166 files in other folders)
