[tool.poetry]
name = "dheera-ai-proxy-extras"
version = "0.4.14"
description = "Additional files for the Dheera AI Proxy. Reduces the size of the main dheera_ai package."
authors = ["BerriAI"]
readme = "README.md"


[tool.poetry.urls]
homepage = "https://dheeraai.com"
Homepage = "https://dheeraai.com"
repository = "https://github.com/dheera-ai/dheera_ai"
Repository = "https://github.com/dheera-ai/dheera_ai"
documentation = "https://docs.dheeraai.com"
Documentation = "https://docs.dheeraai.com"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0, !=3.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.4.14"
version_files = [
    "pyproject.toml:version",
    "../requirements.txt:dheera-ai-proxy-extras==",
    "../pyproject.toml:dheera-ai-proxy-extras = {version = \""
]