[tool.poetry]
name = "dheera-ai-enterprise"
version = "0.1.25"
description = "Package for Dheera AI Enterprise features"
authors = ["BerriAI"]
readme = "README.md"


[tool.poetry.urls]
homepage = "https://dheeraai.com"
Homepage = "https://dheeraai.com"
repository = "https://github.com/dheera-ai/dheera_ai"
Repository = "https://github.com/dheera-ai/dheera_ai"
documentation = "https://docs.dheeraai.com"
Documentation = "https://docs.dheeraai.com"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0, !=3.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.1.25"
version_files = [
    "pyproject.toml:version",
    "../requirements.txt:dheera-ai-enterprise==",
    "../pyproject.toml:dheera-ai-enterprise = {version = \""
]